# Luvesta

./: .env.example  .gitignore  Luvesta_Architecture_Options.md  Luvesta_Hackathon_Spec.md  README.md  app.js  app.json  app.wxss  project.config.json  pyproject.toml
src/conviction_room/: __init__.py  main.py
src/conviction_room/api/: __init__.py  benchmark.py  cost_governor.py  dependency_graph.py  observability.py  registry.py  router.py  test_harness.py
src/conviction_room/contracts/: __init__.py  base.py  context_memory.py  data_provider.py  model_provider.py  orchestration.py  persistence.py  retrieval.py  validator.py
src/conviction_room/models/: __init__.py  automation.py  benchmark.py  cost.py  golden.py  graph.py  plugin.py  test_report.py  testability.py  trace.py
src/conviction_room/services/: __init__.py  benchmark.py  cost_governor.py  data_pipeline.py  dependency_graph.py  experiment_automation.py  golden_dataset.py  observability.py  registry.py  router.py  test_harness.py  testability.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_end_to_end.py
tests/property/: test_benchmark_props.py  test_contracts.py  test_cost_governor_props.py  test_dag_props.py  test_data_pipeline_props.py  test_experiment_automation_props.py  test_golden_dataset_props.py  test_harness_props.py  test_observability_props.py  test_registry_props.py  test_roundtrip.py  test_testability_props.py
tests/unit/: test_data_pipeline.py  test_dependency_graph.py  test_dimension_contracts.py  test_registry.py  test_router.py
